Fixed overlapping background from dream cards

--- a/dream-vault-frontend/src/components/DreamCard/DreamCard.module.css
+++ b/dream-vault-frontend/src/components/DreamCard/DreamCard.module.css
@@ -8,6 +8,7 @@
     position: relative;
     text-overflow: clip;
     overflow-wrap: break-word;
+    background-color: black;
 }
 
 .menuButton{
