--- a/dream-vault-frontend/src/components/DreamCard/DreamCardList.module.css
+++ b/dream-vault-frontend/src/components/DreamCard/DreamCardList.module.css
@@ -7,6 +7,5 @@
     gap: 10px;
     max-width: 50%;
     margin: 0 auto;
-    background-color: black;
     padding-bottom: 2vh;
 }
